fixed save_objects_to_db && l10n

--- a/web_service/templates/includes/services/file_verification.j2
+++ b/web_service/templates/includes/services/file_verification.j2
@@ -57,7 +57,7 @@
       </form>
 
       <form class="form-check form-check__send_results">
-        <p class="span_send_results span_send_results__send-result-file" id="span_send_results" style="display: none">{{ 'Send result file' }}:</p>
+        <p class="span_send_results span_send_results__send-result-file" id="span_send_results" style="display: none">{{ _('Send result file') }}:</p>
         <ul class="form-check-wrap form-check-wrap__list list-reset flex">
           <li class="form-check-wrap-label form-check-wrap-label__list flex" id="send_to_email" style="display:none">
             <label class="checkbox flex" for="checkbox_send_mail">
